--- a/index.html
+++ b/index.html
@@ -5,36 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./CSS/styles.css">
     <title>Document</title>
 </head>
 
 <body>
-    <table>
-        <caption></caption>
-        <thead>
-            <tr>
-                <th>a</th>
-                <th>a</th>
-                <th>a</th>
-                <th>a</th>
-                <th>a</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>a</td>
-                <td>a</td>
-                <td colspan="3">a</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <th colspan="2">a</th>
-                <td>a</td>
-                <td colspan="2">a</td>
-            </tr>
-        </tfoot>
-    </table>
+    <div class="box-1"></div>
+    <div class="box-2"></div>
+    <div class="box-3"></div>
 </body>
 
 </html>
